[package]
name = "esp-ulp-test"
version = "0.1.0"
authors = ["Michael Zill <michael.zill@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", features = [
    "nightly",
    "experimental",
] }
esp-idf-hal = { path = "../../esp-idf-hal", features = [] }
log = "0.4"
anyhow = { version = "1", features = ["backtrace"] }

[build-dependencies]
anyhow = "1"
embuild = { version = "0.31", features = ["elf"] }
#rust-esp32-ulp-blink = { path = "../esp32-ulp-blink", artifact = "bin", target = "riscv32imc-unknown-none-elf" }
[package.metadata.esp-idf-sys]
esp_idf_version = "branch:release/v5.0"
